--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.0.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "libphonenumber-js": "^1.12.10",
