--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lru-cache": "^7.0.0",
     "morgan": "^1.10.1",
     "mysql2": "^3.14.2",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
     "socket.io": "^4.8.1"
   },
