--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "tailwindcss": "^3.4.17"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^7.0.0"
+    "@fortawesome/fontawesome-free": "^7.0.0",
+    "dotenv": "^17.2.1"
   }
 }
