--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.0",
-    "dotenv": "^17.2.1"
+    "dotenv": "^17.2.1",
+    "mysql2": "^3.14.3"
   }
 }
