--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-free": "^7.0.0",
     "dotenv": "^17.2.1",
     "mysql2": "^3.14.3",
-    "nodemailer": "^7.0.5"
+    "nodemailer": "^7.0.5",
+    "twilio": "^5.8.0"
   }
 }
