--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.0",
     "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "mysql2": "^3.14.3",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
