--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mysql2": "^3.14.3",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
+    "socket.io": "^4.8.1",
     "twilio": "^5.8.0"
   }
 }
