--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.0",
     "bcryptjs": "^3.0.2",
+    "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "i18next": "^25.3.2",
+    "i18next-http-backend": "^3.0.2",
+    "jquery": "^3.7.1",
+    "jquery-i18next": "^1.2.1",
     "lru-cache": "^6.0.0",
+    "lucide": "^0.537.0",
     "morgan": "^1.10.1",
     "mysql2": "^3.14.3",
     "node-cron": "^4.2.1",
